--- a/index.html
+++ b/index.html
@@ -44,64 +44,7 @@ CSS
 
   <!-- Start header section -->
   <header class="header-area" id="header-area">
-    <div class="dope-nav-container breakpoint-off">
-      <div class="container">
-        <div class="row">
-          <!-- dope Menu -->
-          <nav class="dope-navbar justify-content-between" id="dopeNav">
 
-            <!-- Logo -->
-            <a class="nav-brand" href="index.html">
-              <img src="img/logo.png" alt="" width="50">
-            </a>
-
-            <!-- Navbar Toggler -->
-            <div class="dope-navbar-toggler">
-              <span class="navbarToggler">
-                <span></span>
-                <span></span>
-                <span></span>
-              </span>
-            </div>
-
-            <!-- Menu -->
-            <div class="dope-menu">
-
-              <!-- close btn -->
-              <div class="dopecloseIcon">
-                <div class="cross-wrap">
-                  <span class="top"></span>
-                  <span class="bottom"></span>
-                </div>
-              </div>
-
-              <!-- Nav Start -->
-              <div class="dopenav">
-                <ul id="nav">
-                  <li>
-                    <a href="#banner-section">Home</a>
-                  </li>
-                  <li>
-                    <a href="#about-section">About</a>
-                  </li>
-                  <li>
-                    <a href="#feature-section">Feature</a>
-                  </li>
-                  <li>
-                    <a href="#testimonial-section">Testimonial</a>
-                  </li>
-                  <li>
-                    <a href="#blog-section">Blog</a>
-                  </li>
-                </ul>
-
-              </div>
-              <!-- Nav End -->
-            </div>
-          </nav>
-        </div>
-      </div>
-    </div>
   </header>
   <!-- Start header section -->
 
@@ -111,11 +54,11 @@ CSS
     <div class="container">
       <div class="row align-items-center fullscreen">
         <div class="col-md-6 banner-left">
-          <h1>Hi, We Are <br> <span>M Naseer.</span></h1>
-          <p>M Naseer Design Studio is a leading boutique studio for the creation of best-in-class logo design and brand
-            identity.</p>
-          <p>We educate people about their brand stories, identity, design and business. Through creative excellence, we
-            transform brands into sustainable success stories that inspire customers and employees alike.</p>
+          <h1>Hi, Welcome to <br> <span>BBMN.</span></h1>
+          <p>I create the best logos and brand identity that doesn't just look good, but which makes you feel something
+            too, i educate clients about their brand stories, identity design and business.</p>
+          <p>Through creative excellence,
+            i transform brands into sustainable success stories that inspire their target audiences.</p>
           <a class="video-btn primary-btn" href="about-us.html">About More</a>
         </div>
       </div>
@@ -198,10 +141,9 @@ CSS
               <div class="single-feature relative">
                 <div class="overlay overlay-bg"></div>
                 <span class="ti-comments-smiley"></span>
-                <h3>Meet & Agree</h3>
+                <h3>Discovery</h3>
                 <p>
-                  His many legs, pitifully thin compared with the size of the rest of him, waved
-                  about helplessly as he looked.
+                  Firstly, I learn about the Objectives of the project.
                 </p>
               </div>
             </div>
@@ -209,10 +151,9 @@ CSS
               <div class="single-feature relative">
                 <div class="overlay overlay-bg"></div>
                 <span class="ti-light-bulb"></span>
-                <h3>Idea & Conceft</h3>
+                <h3>Strategy</h3>
                 <p>
-                  His many legs, pitifully thin compared with the size of the rest of him, waved
-                  about helplessly as he looked.
+                  Secondly i develop a strategy that define the objectives of the project.
                 </p>
               </div>
             </div>
@@ -220,10 +161,9 @@ CSS
               <div class="single-feature relative">
                 <div class="overlay overlay-bg"></div>
                 <span class="ti-pencil-alt"></span>
-                <h3>Design & Creativity</h3>
+                <h3>Presentation</h3>
                 <p>
-                  His many legs, pitifully thin compared with the size of the rest of him, waved
-                  about helplessly as he looked.
+                  Thirdly I present a concept and finalize on the best option.
                 </p>
               </div>
             </div>
@@ -231,10 +171,19 @@ CSS
               <div class="single-feature relative">
                 <div class="overlay overlay-bg"></div>
                 <span class="ti-import"></span>
-                <h3>Build & Install</h3>
+                <h3>Design</h3>
                 <p>
-                  His many legs, pitifully thin compared with the size of the rest of him, waved
-                  about helplessly as he looked.
+                  Fourthly I design concept that are based on the strategy of the project.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="single-feature relative">
+                <div class="overlay overlay-bg"></div>
+                <span class="ti-import"></span>
+                <h3>Deliver</h3>
+                <p>
+                  Finally, I prepare the designs and other requirements of the project.
                 </p>
               </div>
             </div>
