--- a/index.html
+++ b/index.html
@@ -935,6 +935,7 @@ JS
   <script src="js/jquery.stellar.min.js"></script>
   <script src="js/jquery.counterup.min.js"></script>
   <script src="js/waypoints.min.js"></script>
+  <script src="js/index.js"></script>
   <script src="js/main.js"></script>
 </body>
 
