--- a/index.html
+++ b/index.html
@@ -42,29 +42,61 @@ CSS
     <div class="loader-section section-right"></div>
   </div>
 
-  <!-- Start header section -->
   <header class="header-area" id="header-area">
 
   </header>
-  <!-- Start header section -->
 
-  <!-- Start banner section -->
   <section class="banner-section2 relative" id="banner-section">
     <div class="overlay overlay-bg"></div>
     <div class="container">
       <div class="row align-items-center fullscreen">
         <div class="col-md-6 banner-left">
           <h1>Hi, Welcome to <br> <span>BBMN.</span></h1>
-          <p>I create the best logos and brand identity that doesn't just look good, but which makes you feel something
+          <p class="mt-5">I create the best logos and brand identity that doesn't just look good, but which makes you
+            feel something
             too, i educate clients about their brand stories, identity design and business.</p>
           <p>Through creative excellence,
             i transform brands into sustainable success stories that inspire their target audiences.</p>
-          <a class="video-btn primary-btn" href="about-us.html">About More</a>
+          <a class="video-btn primary-btn" href="about-us.html">View Our Work</a>
         </div>
       </div>
     </div>
   </section>
-  <!-- End banner section -->
+
+  <section class="brands-section section-gap-full relative" style="padding-top: 0 !important" id="brands-section">
+    <div class="container">
+      <h1 class="text-center text-white">I am proud to have worked <br> with theses amazing brands</h1>
+      <div class="d-flex justify-content-center">
+        <img class="img-inline" src="img/banner.svg" alt="Orange" loading="lazy" width="75">
+      </div>
+      <div class="row justify-content-center mt-5 brands">
+        <div class="col-sm-3">
+          <img src="img/brands/goldenpenny.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/buk.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/IAYI.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/maiduguri.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/nn.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/nse.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/pp.png" alt="">
+        </div>
+        <div class="col-sm-3">
+          <img src="img/brands/yandutse.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Start about section -->
   <section class="about-section section-gap-full relative" id="about-section">
@@ -77,16 +109,19 @@ CSS
           <h1>About</h1>
           <p>
 
-            Naseer is a leading Graphic Designer and Content Creator who specialises in logo design, hand
-            lettering, brand identity and videography.
+            Naseer is a brand identity designer with 6years of experience in design industry, a photographer and a
+            digital marketer.
             <br><br>
-            With more than 10 years of experience, Will has produced high-quality content for hundreds of clients,
-            ranging from FTSE-listed corporations to SMEs and small-scale start-ups.
+            Naseer obtained an online diploma in Graphic Design with focus on Branding from <em>Austin
+              Peay State University</em> in The US, I enjoyed working with Brands like Maiduguri
+            Caps, Mahs Table Tradition and Ayyza Cuisine, Chef Urwat, Sufimart as well as small
+            businesses and start-ups
             <br><br>
-            Naseer is a world-renowned designer whose YouTube videos and tutorials have amassed over 40 million views
-            since it's launch, inspiring and equipping designers all around the world to hone and develop their skills.
+            Naseer loves designing beautiful and simple looking brands and experiences that meet
+            business objectives and delight their users.
+            Naseer does this across multiple touch points to help Brands and companies build strong
+            brand presence and achieve their goals.
           </p>
-          <a class="primary-btn" href="about-us.html">Know More</a>
         </div>
       </div>
     </div>
@@ -128,12 +163,9 @@ CSS
       <div class="row align-items-center feature-wrap">
         <div class="col-lg-4 header-left">
           <h1>
-            Our
-            <br> Process To Get Things Next Level
+            My
+            <br> Process to deliver on a top level
           </h1>
-          <a class="primary-btn" href="about-us.html">Know More
-            <span class="ti-arrow-right"></span>
-          </a>
         </div>
         <div class="col-lg-8">
           <div class="row features-wrap">
@@ -198,70 +230,44 @@ CSS
   <section class="service-section section-gap-full">
     <div class="container">
       <div class="section-title">
-        <h2 class="text-center">Our Service</h2>
-        <p class="text-center">Discover The Service We Provide</p>
+        <h2 class="text-center">Services</h2>
+        <p class="text-center">Discover My Capabilities</p>
       </div>
       <div class="row">
         <div class="col-lg-4  col-md-6 pb-30">
           <div class="single-service">
             <i class="ti-user"></i>
-            <h4>Executive Admin</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
+            <h4>STRATEGY</h4>
+            <p class="mb-2">Eye-catching, thumb-stopping creative design that drives higher conversions.</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Discovery & Research</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Brand Strategy</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Brand Positioning</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Personality & Tone</p>
           </div>
         </div>
         <div class="col-lg-4  col-md-6 pb-30">
           <div class="single-service">
             <i class="ti-announcement"></i>
-            <h4>Marketing Social Media</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
+            <h4>DESIGN</h4>
+            <p class="mb-2">Eye-catching, thumb-stopping creative design that drives higher conversions.</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Logo & Identity Design</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Visual design</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Illustration & Icons</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Brand Style Guide</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Packaging Design</p>
           </div>
         </div>
         <div class="col-lg-4  col-md-6 pb-30">
           <div class="single-service">
             <i class="ti-bar-chart"></i>
-            <h4>Project Management</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
+            <h4>PRODUCTION</h4>
+            <p class="mb-2">Eye-catching, thumb-stopping creative design that drives higher conversions.</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Animation</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Photography</p>
+            <p class="serviceList"><b class="brand-color">-&nbsp;</b> Video Editing</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 ">
-          <div class="single-service">
-            <i class="ti-palette"></i>
-            <h4>Design Service</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 ">
-          <div class="single-service">
-            <i class="ti-agenda"></i>
-            <h4>Book Keeping</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 ">
-          <div class="single-service">
-            <i class="ti-pencil-alt"></i>
-            <h4>Writing & Editing</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-              molestias.
-            </p>
-          </div>
-        </div>
+
 
       </div>
     </div>
