--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@ CSS
     <div class="container">
       <div class="row align-items-center fullscreen">
         <div class="col-md-6 banner-left">
-          <h1>Hi, Welcome to <br> <span>BBMN.</span></h1>
-          <p class="mt-5">I create the best logos and brand identity that doesn't just look good, but which makes you
-            feel something
-            too, i educate clients about their brand stories, identity design and business.</p>
-          <p>Through creative excellence,
-            i transform brands into sustainable success stories that inspire their target audiences.</p>
-          <a class="video-btn primary-btn" href="about-us.html">View Our Work</a>
+          <h1>Hi, Welcome to <br> <span>The MNaseer.</span></h1>
+          <h1 class="mt-5 mb-5 text-white"></p>
+            we transform brands into sustainable success stories that inspire their target audiences.</h1>
+          <a class="video-btn primary-btn" href="#portfolio-section">View Our Work</a>
         </div>
       </div>
     </div>
@@ -227,7 +224,7 @@ CSS
   <!-- End feature section -->
 
   <!-- Start service section -->
-  <section class="service-section section-gap-full">
+  <section class="service-section section-gap-full" id="service-section">
     <div class="container">
       <div class="section-title">
         <h2 class="text-center">Services</h2>
@@ -320,7 +317,7 @@ CSS
   <!-- End stat section -->
 
   <!-- Start portfolio section -->
-  <section class="portfolio-section section-gap-full">
+  <section class="portfolio-section section-gap-full" id="portfolio-section">
     <div class="container">
       <div class="section-title">
         <h2 class="text-center">Our Featured Works</h2>
@@ -884,22 +881,22 @@ CSS
         <div class="col-lg-7">
           <ul id="social">
             <li>
-              <a target="_blank" href="#">
+              <a target="_blank" href="https://www.facebook.com/nass.muhammad.7">
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
             <li>
-              <a target="_blank" href="#">
+              <a target="_blank" href="https://www.twitter.com/the_mnaseer">
                 <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a target="_blank" href="#">
-                <i class="fa fa-google-plus"></i>
+              <a target="_blank" href="https://www.behance.net/M96eer?tracking_source=search_projects%7Cm96eer">
+                <i class="fa fa-behance"></i>
               </a>
             </li>
             <li>
-              <a target="_blank" href="#">
+              <a target="_blank" href="https://www.instagram.com/the.mnaseer">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
