made work dynamic

--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
   <!-- Mobile Specific Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicon-->
-  <link rel="shortcut icon" href="img/fav.png">
+  <link rel="shortcut icon" href="img/favicon.png">
   <!-- Author Meta -->
   <meta name="author" content="">
   <!-- Meta Description -->
@@ -43,7 +43,7 @@ CSS
 
   <!-- Start header section -->
   <header class="header-area" id="header-area">
-   
+
   </header>
   <!-- Start header section -->
 
@@ -52,9 +52,9 @@ CSS
     <div class="overlay overlay-bg"></div>
     <div class="container">
       <div class="row section-gap-half">
-        <div class="col-lg-12 text-center">
-          <h1>Product title</h1>
-          <h4>product</h4>
+        <div class="col-lg-12 text-center" id="headInfo">
+          <h1>Title</h1>
+          <h4>Branding</h4>
         </div>
       </div>
     </div>
@@ -63,25 +63,23 @@ CSS
 
   <!-- Start product-detials section -->
   <section class="product-detials-section section-gap-full">
-    <div class="container">
+    <div class="container relative">
       <div class="row">
-        <div class="col-lg-8 details-left">
-          <img class="img-fluid" src="img/portfolio4.jpg" alt="">
+        <div class="col-lg-6 details-left">
+          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
+          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
+          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
         </div>
-        <div class="col-lg-4 details-right">
+        <div class="col-lg-6 details-right" id="details">
           <ul>
-            <li><span>Client:</span> Envato</li>
-            <li><span>Category:</span> Fashion,Design</li>
-            <li><span>Visit:</span> envato.com</li>
-            <li><span>Date:</span> 01.09.2018</li>
+            <li><span>Client:</span> Title</li>
+            <li><span>Category:</span> Branding</li>
           </ul>
-          <p>
-            To shewing another demands to. Marianne property cheerful informed at striking at.
+          <p class="text-white">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, unde!.
           </p>
-          <p>
-            Received shutters expenses ye he pleasant. Drift as blind above at up. No up simple county stairs do should
-            praise as. Drawings sir gay together landlord had law smallest. Formerly welcomed attended declared met say
-            unlocked. Jennings outlived no dwelling denoting in peculiar.
+          <p class="text-white">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, illo?.
           </p>
         </div>
       </div>
@@ -91,54 +89,7 @@ CSS
 
   <!-- Start footer section -->
   <footer class="footer-section section-gap-half">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-5 footer-left">
-          <a href="#">
-            <img src="img/logo-w.png" alt="" width="100">
-          </a>
-          <p class="copyright-text">&copy; 2022 M Naseer All right reserved.</p>
-        </div>
-        <div class="col-lg-7">
-          <ul id="social">
-            <li>
-              <a target="_blank" href="#">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="#">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="#">
-                <i class="fa fa-google-plus"></i>
-              </a>
-            </li>
-            <li>
-              <a target="_blank" href="#">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </li>
-          </ul>
-          <ul class="footer-menu">
-            <li>
-              <a href="#">Affiliate Program</a>
-            </li>
-            <li>
-              <a href="#">Terms & Conditionss</a>
-            </li>
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="#">Refund Policy</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+
   </footer>
   <!-- End footer section -->
 
@@ -160,6 +111,7 @@ JS
   <script src="js/jquery.stellar.min.js"></script>
   <script src="js/jquery.counterup.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
 
