make work dynamic

--- a/work.html
+++ b/work.html
@@ -65,23 +65,24 @@ CSS
   <section class="product-detials-section section-gap-full">
     <div class="container relative">
       <div class="row">
-        <div class="col-lg-6 details-left">
-          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
-          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
-          <img class="img-fluid" src="img/projects/capMaiduguri.jpg" alt="">
+        <div class="col-lg-6 relative">
+          <div class="details-right" id="details">
+            <ul>
+              <li><span>Client:</span> Title</li>
+              <li><span>Category:</span> Branding</li>
+            </ul>
+            <p class="text-white">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, unde!.
+            </p>
+            <p class="text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, illo?.
+            </p>
+          </div>
         </div>
-        <div class="col-lg-6 details-right" id="details">
-          <ul>
-            <li><span>Client:</span> Title</li>
-            <li><span>Category:</span> Branding</li>
-          </ul>
-          <p class="text-white">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, unde!.
-          </p>
-          <p class="text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, illo?.
-          </p>
+        <div class="col-lg-6 details-left" id="imgSliders">
+          <!-- <IMG> -->
         </div>
+
       </div>
     </div>
   </section>
