instagram recent posts

--- a/index.html
+++ b/index.html
@@ -320,233 +320,11 @@ CSS
       </div>
       <div class="row justify-content-center" id="someWork">
 
-       
+
       </div>
     </div>
   </section>
   <!-- End portfolio section -->
-
-  <!-- Start team section -->
-  <section class="team-section section-gap-full">
-    <div class="container">
-      <div class="section-title">
-        <h2 class="text-center">Our Team</h2>
-        <p class="text-center">Intoducing the Potential Team.</p>
-      </div>
-      <div class="row">
-        <div class="team-carusel  owl-carousel" id="team-carusel">
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team1.jpg" alt="">
-            <div class="team-content">
-              <h4>Foto Sushi</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team2.jpg" alt="">
-            <div class="team-content">
-              <h4>Philipe Cavalcante</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team3.jpg" alt="">
-            <div class="team-content">
-              <h4>Cristian Newman</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team4.jpg" alt="">
-            <div class="team-content">
-              <h4>Conor Sexton</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team5.jpg" alt="">
-            <div class="team-content">
-              <h4>Pete Bellis</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team6.jpg" alt="">
-            <div class="team-content">
-              <h4>Tanja Heffner</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team1.jpg" alt="">
-            <div class="team-content">
-              <h4>Foto Sushi</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team2.jpg" alt="">
-            <div class="team-content">
-              <h4>Philipe Cavalcante</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="single-team item">
-            <img class="img-fluid" src="img/team3.jpg" alt="">
-            <div class="team-content">
-              <h4>Cristian Newman</h4>
-              <ul>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End team section -->
 
   <!-- Start testimonial section -->
   <section class="testimonial-section section-gap-full" id="testimonial-section">
@@ -664,6 +442,20 @@ CSS
   <section class="blog-section" id="blog-section">
     <div class="container blog-wrap section-gap-full">
       <div class="section-title">
+        <h2 class="text-center">Our Recent Posts</h2>
+        <!-- <p class="text-center">Discover The writing we Wrote</p> -->
+      </div>
+      <div class="row justify-content-center" id="showThePost">
+        <!-- POSTS -->
+      </div>
+    </div>
+  </section>
+  <!-- End blog section -->
+
+  <!-- Start blog section -->
+  <!-- <section class="blog-section" id="blog-section">
+    <div class="container blog-wrap section-gap-full">
+      <div class="section-title">
         <h2 class="text-center">Our Recent Writings</h2>
         <p class="text-center">Discover The writing we Wrote</p>
       </div>
@@ -730,26 +522,13 @@ CSS
         <a href="blog.html" class="primary-btn">Read More</a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End blog section -->
 
   <!-- Start clients section -->
   <section class="clients-section">
     <div class="container">
-      <div class="row clients-wrap">
-        <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-          <img class="img-fluid" src="img/logo/logo1.png" alt="">
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-          <img class="img-fluid" src="img/logo/logo2.png" alt="">
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-          <img class="img-fluid" src="img/logo/logo3.png" alt="">
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-          <img class="img-fluid" src="img/logo/logo4.png" alt="">
-        </div>
-      </div>
+
       <div class="row contact-wrap align-items-center justify-content-between">
         <div class="col-lg-3 col-md-6">
           <h4>Need Intermidiate Solution?</h4>
